Sex colored underline when hover

--- a/hd/etc/css/css.css
+++ b/hd/etc/css/css.css
@@ -259,6 +259,10 @@ table#dag {
   color: black;
 }
 
+a.male-underline:hover { border-bottom: 1px solid #318CE7; }
+a.female-underline:hover { border-bottom: 1px solid #F653A6; }
+a.neuter-underline:hover { border-bottom: 1px solid grey; }
+
 /* Fixed width button in books indexes using monospace font */
 a.book-char{
   font-family: monospace, monospace;
