--- a/hd/etc/css/css.css
+++ b/hd/etc/css/css.css
@@ -1,3 +1,8 @@
+
+h1, h2, h3, h4, h5, h6 { font-weight: lighter !important; }
+
+
+/* Remove overused p anchor top margin*/
 p {
 	margin-top:1rem;
 }
