Rework surname_by_branch / m=N;v=
This page wasn't compliant with HTML5.
- dl/dt/dd only used on first level
- ul/li + CSS for others
- added class posterity to be able to inline "..."

Signed-off-by: Ludovic Ledieu <lledieu@free.fr>

--- a/hd/etc/css/css.css
+++ b/hd/etc/css/css.css
@@ -1404,3 +1404,24 @@ span.notesourcecolor {
     word-wrap: break-word;
     max-width: 40%;
 }
+
+/* surname by branch m=N */
+#surname_by_branch {
+    white-space: nowrap;
+}
+#surname_by_branch dt {
+ margin-top: 1.5em;
+}
+#surname_by_branch ul, #surname_by_branch li {
+    list-style: none;
+    margin: 0;
+}
+/* Uncomment to get it event more compact
+#surname_by_branch ul.posterity {
+    display: inline;
+    padding: 0;
+}
+#surname_by_branch ul.posterity li {
+    display: inline;
+}
+*/
