add missing borders for a cleaner relation table
- table revamp: nicer design, red/blue colors kept only on counts
- smaller ancestors cells (?), borders depending on descendancy
- factorize ancestor+cousins: now uses cousin.v1.v2 everywhere!
- add counts of ascendant/descendants/living ind./ind. w. no desc.
- remove “path” count temporary
- fix RL on desc (i=-1): ancestor is given twice in URL

--- a/hd/etc/css/css.css
+++ b/hd/etc/css/css.css
@@ -17,9 +17,8 @@ p {
 /* Relation menu table */
 #quickrel.table td{
 	padding: 0px;
-	vertical-align: middle;
-	height: 140px;
-}
+	line-height:1em;
+	}
 
 .tooltip.show {
   opacity: 1;
